@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2025-03-02T01:10:05Z",
+  "timestamp" : "2025-03-09T00:58:38Z",
   "count_outdated" : 95,
   "uniques_outdated" : 77,
-  "count" : 96,
-  "uniques" : 78,
+  "count" : 97,
+  "uniques" : 79,
   "clones" : [
     {
       "timestamp": "2025-03-01T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-03-08T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
